--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
    
 </head>
 <body>
-    <div class="table">
-        <div class="table__admin admin">
-            <input id="admin-name" type="text" class="admin__item" placeholder="Name">
-            <input id="admin-last-name" type="text" class="admin__item" placeholder="last name">
-            <input id="admin-number" type="text" class="admin__item" placeholder="phone">
-            <button class="admin__btn admin__item">PRESS</button>
-        </div>
-        <ul class="table__list">
-            
-        </ul>
+    <div class="wrapper">
+       <div class="header-item">
+           <div class="inpur-wrap">
+               <input id="input-task" type="text" placeholder="Text">
+           </div>
+           <button class="btn">Add</button>
+       </div>
+       <div class="body-item"></div>
     </div>
     
     <script src="./app.js"></script>
