--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
        <div class="header-item">
            <div class="inpur-wrap">
                <input id="input-task" type="text" placeholder="Text">
+               <div class="error-cont"></div>
            </div>
            <button class="btn">Add</button>
        </div>
